Fix z-indexes. Fix bug of alert with a spinner
Alert could be closed by clicking the background
Navigation bar was at the top of the alert

--- a/styles/base/Overlay.module.css
+++ b/styles/base/Overlay.module.css
@@ -14,7 +14,7 @@
   opacity: 1;
   visibility: visible;
 
-  z-index: 5;
+  z-index: 7;
 
   transition: calc(var(--transition-duration) * 2);
 }
