--- a/styles/layout/NavigationBar.module.css
+++ b/styles/layout/NavigationBar.module.css
@@ -15,7 +15,7 @@
   left: 0;
   right: 0;
 
-  z-index: 10;
+  z-index: 5;
 }
 
 .logo {
